<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"

    android:gravity="center"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dim10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/aclonica"
            android:text="@string/login_text"
            android:textSize="@dimen/dim40sp"
            />

        <EditText
            android:id="@+id/login_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim50dp"
            android:hint="@string/enter_id"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textColorHint="@color/white"
            android:background="@drawable/button_background" />

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim50dp"
            android:layout_marginTop="@dimen/dim10dp"
            android:hint="@string/enter_pass"
            android:textColor="@color/white"
            android:inputType="numberPassword"
            android:textAlignment="center"
            android:textColorHint="@color/white"
            android:background="@drawable/button_background" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_btn"
            android:layout_marginTop="@dimen/dim10dp"
            android:padding="@dimen/dim20dp"
            android:background="@drawable/button_background"
            android:text="@string/login_text"
            android:backgroundTint="@color/white"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim50dp"
            android:text="@string/register_text"
            android:textSize="@dimen/dim20sp"
            android:id="@+id/reg"
            android:textAlignment="center"
            android:textColor="@color/white"
            />
    </LinearLayout>

</RelativeLayout>